test_output_16.txt
  File "E:\omniai-studio-universe\hub-backend\tests\full_integration_test.py", line 65
    })
     ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '[' on line 35
